branches/seabreeze_pre_cpp11/include/api/SeaBreezeWrapper.h

    
    DLL_DECL int seabreeze_open_spectrometer(int index, int *error_code);
    DLL_DECL int seabreeze_close_spectrometer(int index, int *error_code);
	DLL_DECL int seabreeze_get_error_string_maximum_length(void);
    DLL_DECL int seabreeze_get_error_string(int error_code, char *buffer, int buffer_length);
    DLL_DECL int seabreeze_get_model(int index, int *error_code, char *buffer, int buffer_length);
	DLL_DECL int seabreeze_get_model_string_maximum_length(void);
    DLL_DECL void seabreeze_set_trigger_mode(int index, int *error_code, int mode);
    DLL_DECL void seabreeze_set_integration_time_microsec(int index, int *error_code, unsigned long integration_time_micros);
    DLL_DECL long seabreeze_get_min_integration_time_microsec(int index, int *error_code);
    DLL_DECL void seabreeze_set_shutter_open(int index, int *error_code, unsigned char opened);
    DLL_DECL void seabreeze_set_strobe_enable(int index, int *error_code, unsigned char strobe_enable);
    DLL_DECL int seabreeze_get_light_source_count(int index, int *error_code);
    DLL_DECL void seabreeze_set_light_source_enable(int index, int *error_code, int light_index, unsigned char enable);
    DLL_DECL void seabreeze_set_light_source_intensity(int index, int *error_code, int light_index, double intensity);
    DLL_DECL int seabreeze_read_eeprom_slot(int index, int *error_code, int slot_number, unsigned char *buffer, int buffer_length);
    DLL_DECL int seabreeze_write_eeprom_slot(int index, int *error_code, int slot_number, unsigned char *buffer, int buffer_length);
    DLL_DECL int seabreeze_read_irrad_calibration(int index, int *error_code, float *buffer, int buffer_length);
    DLL_DECL int seabreeze_write_irrad_calibration(int index, int *error_code, float *buffer, int buffer_length);
    DLL_DECL int seabreeze_has_irrad_collection_area(int index, int *error_code);
    DLL_DECL float seabreeze_read_irrad_collection_area(int index, int *error_code);
    DLL_DECL void seabreeze_write_irrad_collection_area(int index, int *error_code, float area);
    DLL_DECL double seabreeze_read_tec_temperature(int index, int *error_code);
    DLL_DECL void seabreeze_set_tec_temperature(int index, int *error_code, double temperature_degrees_celsius);
    DLL_DECL void seabreeze_set_tec_enable(int index, int *error_code, unsigned char tec_enable);
    DLL_DECL void seabreeze_set_tec_fan_enable(int index, int *error_code, unsigned char tec_fan_enable);
    DLL_DECL int seabreeze_get_unformatted_spectrum(int index, int *error_code, unsigned char *buffer, int buffer_length);
    DLL_DECL int seabreeze_get_formatted_spectrum(int index, int *error_code, double* buffer, int buffer_length);
    DLL_DECL int seabreeze_get_unformatted_spectrum_length(int index, int *error_code);
    DLL_DECL int
    seabreeze_get_formatted_spectrum_length(int index, int *error_code);
    DLL_DECL int seabreeze_get_wavelengths(int index, int *error_code, double *wavelengths, int length);
    DLL_DECL int seabreeze_get_serial_number(int index, int *error_code, char *buffer, int buffer_length);
	DLL_DECL unsigned char seabreeze_get_serial_number_max_length(int index, int *error_code);
	DLL_DECL unsigned short seabreeze_get_number_of_pixels(int index, int *error_code);
    DLL_DECL int seabreeze_get_electric_dark_pixel_indices(int index, int *error_code, int *indices, int length);
	DLL_DECL int seabreeze_get_optical_dark_pixel_indices(int index, int *error_code, int *indices, int length);
	DLL_DECL int seabreeze_get_active_pixel_indices(int index, int *error_code, int *indices, int length);
    DLL_DECL void seabreeze_shutdown();
    DLL_DECL int seabreeze_write_usb(int index, int *errorCode, unsigned char endpoint, unsigned char* buffer, unsigned int length);
    DLL_DECL int seabreeze_read_usb(int index, int *errorCode, unsigned char endpoint, unsigned char* buffer, unsigned int length);
    DLL_DECL int seabreeze_get_api_version_string(char *buffer, int len);
    DLL_DECL int seabreeze_get_usb_descriptor_string(int index, int *errorCode, int id, unsigned char *buffer, int len);
    DLL_DECL void seabreeze_set_continuous_strobe_period_microsec(int index, int *errorCode, unsigned short strobe_id, unsigned long period_usec);
    DLL_DECL void seabreeze_set_acquisition_delay_microsec(int index, int *errorCode, unsigned long delay_usec);
    DLL_DECL void seabreeze_clear_buffer(int index, int *error_code);
    DLL_DECL unsigned long seabreeze_get_buffer_element_count(int index, int *error_code);
    DLL_DECL unsigned long seabreeze_get_buffer_capacity(int index, int *error_code);
    DLL_DECL unsigned char seabreeze_get_buffering_enable(int index, int *error_code);
    DLL_DECL unsigned long seabreeze_get_buffer_capacity_maximum(int index, int *error_code);
    DLL_DECL unsigned long seabreeze_get_buffer_capacity_minimum(int index, int *error_code);
    DLL_DECL void seabreeze_set_buffer_capacity(int index, int *error_code, unsigned long capacity);
    DLL_DECL void seabreeze_set_buffering_enable(int index, int *error_code, unsigned char isEnabled);
    DLL_DECL void seabreeze_set_verbose(int flag);
    DLL_DECL void seabreeze_set_logfile(char* pathname, int len);